[package]
name = "dash-spv-ffi"
version = "0.1.17"
edition = "2018"
build = "build.rs"
publish = false

[dependencies]
byte = "0.2"

#[dependencies.dash-spv-primitives]
#path = "../dash-spv-primitives"
#[dependencies.dash-spv-models]
#path = "../dash-spv-models"

[dependencies.dash-spv-primitives]
git = "https://github.com/pankcuf/dash-spv-primitives"
branch = "master"
version = "0.1.13"
[dependencies.dash-spv-models]
git = "https://github.com/pankcuf/dash-spv-models"
branch = "core-v0.18"
version = "0.1.16"

[build-dependencies]
cbindgen = "0.20.0"

[lib]
name = "dash_spv_ffi"

[profile.release]
lto = "thin"
opt-level = 3
debug = true
